--- a/views/main.html
+++ b/views/main.html
@@ -1,28 +1,29 @@
 <style>
-  #container {
-    width: 100%;
-  }
   h1 {
     text-align: center;
   }
-  .player {
+  #controls {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
+    width: 50%;
+  }
+  #leftBtn {
+    float: left;
+  }
+  #rightBtn {
+    float: right;
   }
 </style>
 
-<div id="container" ng-init="login()">
-  <h1>{{ header }}</h1>
-  <p>Time remaining: {{ timer }}</p>
-  <p>Score: {{ score }}</p>
-  <p>Guess: {{ guess }}</p>
-  <div class="player">
-    <audio ng-src="{{ audio }}" controls=""></audio>
-    <div class="actionButtons">
-      <button ng-click="decide('eminem')">Eminem</button>
-      <button ng-click="decide('fall out boy')">Fall Out Boy</button>
-    </div>
+<h1>{{ header }}</h1>
+<p>Time remaining: {{ timer }}</p>
+<p>Score: {{ score }}</p>
+<p>Guess: {{ guess }}</p>
+<div id="controls" ng-init="login()">
+  <audio id="player" ng-src="{{ audio }}" autoplay></audio>
+  <div class="actionButtons">
+    <button id="leftBtn" ng-click="decide('eminem')">Eminem</button>
+    <button id="rightBtn" ng-click="decide('fall out boy')">Fall Out Boy</button>
   </div>
 </div>
