Jumbotron. Rename to mcginntunes. Refactor main page.

--- a/views/main.html
+++ b/views/main.html
@@ -1,4 +1,5 @@
-<p>{{ about }}</p>
-<form action="#/play">
-  <input type="submit" value="Play">
-</form>
+<div class="jumbotron">
+  <h1>Welcome!</h1>
+  <p>{{ about }}</p>
+  <p><a href="#/play" class="btn btn-primary btn-lg" role="button">Play</a></p>
+</div>
