--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,31 @@ footer {
   margin-right: auto;
   margin-top: 10px;
   padding-top: 10px;
-  width: 700px;
+  text-align: center;
+  width: 85%;
+}
+
+.btn.btn-circle {
+  border-radius: 50px;
+  height: 80px;
+  width: 80px;
+}
+
+.play-display th, .play-display td {
+  text-align: center;
+}
+
+.play-display th {
+  padding: 10px 20px 10px 20px;
+}
+
+.display-border {
+  border: 1px solid black;
+}
+
+.play-display td {
+  font-size: 2.5em;
+  font-weight: bold;
 }
 
 #countdown {
