--- a/views/play.html
+++ b/views/play.html
@@ -26,15 +26,26 @@
   <p>{{ countdown }}</p>
 </div>
 <div id="playContent">
+  <div class="col-md-12">
+    <table align="center" class="play-display">
+      <tr>
+        <th>Score</th>
+        <td class="display-border" rowspan="2"></td>
+        <th>Time</th>
+      </tr>
+      <tr>
+        <td>0</td>
+        <td>65</td>
+      </tr>
+    </table>
+  </div>
   <p class="headerContent">
-    Time left:
-    <div>{{ timer }}</div>
   </p>
-  <div id="controls" ng-init="login()">
+  <div id="controls">
     <audio id="player" ng-src="{{ audio }}" autoplay></audio>
     <div class="actionButtons">
-      <button id="leftBtn" ng-click="decide('eminem')">Eminem</button>
-      <button id="rightBtn" ng-click="decide('fall out boy')">Fall Out Boy</button>
+      <button id="leftBtn" class="btn btn-primary btn-circle" ng-click="decide(EMINEM)">Eminem</button>
+      <button id="rightBtn" class="btn btn-danger btn-circle" ng-click="decide(FOB)">Fall Out<br>Boy</button>
     </div>
   </div>
 </div>
