--- a/styles/main.css
+++ b/styles/main.css
@@ -22,12 +22,13 @@ footer {
   text-align: center;
 }
 
-.play-display th {
+.play-display th, .play-display td {
   padding: 10px 20px 10px 20px;
 }
 
 .display-border {
   border: 1px solid black;
+  padding: 0px !important;
 }
 
 .play-display td {
