--- a/views/play.html
+++ b/views/play.html
@@ -10,8 +10,15 @@
   }
 </style>
 
-<div id="countdown" class="headerContent">
-  <p>{{ countdown }}</p>
+<div id="countdown">
+  <table align="center" class="play-display">
+    <tr>
+      <th>Your game will begin in</th>
+    </tr>
+    <tr>
+      <td>{{ countdown }}</td>
+    </tr>
+  </table>
 </div>
 <div id="playContent" class="col-md-12">
   <table align="center" class="play-display">
@@ -23,13 +30,14 @@
     <tr>
       <td>{{ score }}</td>
       <td>{{ timer }}</td>
+      <!-- <td>0:59</td> -->
     </tr>
   </table>
   <div id="controls" ng-init="login()">
     <audio id="player" ng-src="{{ audio }}" autoplay></audio>
     <div class="actionButtons">
-      <button class="btn btn-primary btn-circle" ng-click="decide(EMINEM)">Eminem</button>
-      <button class="btn btn-danger btn-circle" ng-click="decide(FOB)">Fall Out<br>Boy</button>
+      <button class="btn btn-primary btn-circle" ng-click="decide({{ EMINEM }})">Eminem</button>
+      <button class="btn btn-danger btn-circle" ng-click="decide({{ FOB }})">Fall Out<br>Boy</button>
     </div>
   </div>
 </div>
